🐛 Fix form layout on mobile

--- a/beamup/assets/main.css
+++ b/beamup/assets/main.css
@@ -592,6 +592,10 @@ video {
   position: static;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
